Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- cpsskins_cps3/cpsskins_getNavigationInfo.py: better traversal to obtain
  root proxy folders.
- Made cell block editing less modal: the layout of cell blocks can be edited
  even if they are not selected.
- Made the installer more robust on how to find CPSSkins .po files.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- better caching of the base url.
- Check CPS3 instance by checking the isntance type instead of the meta_type